fix: logo sizing on mobile (NGEN-114)

--- a/components/containerfooter.module.scss
+++ b/components/containerfooter.module.scss
@@ -72,12 +72,8 @@
         .brand {
             .logo-block {
                 img {
-                    //max-width: 6rem !important;
                     transition: all 0.3s ease-in-out;
-                    height: auto;
                     max-height: 5rem;
-                    width: auto;
-                    max-width: 100%;
                 }
 
                 @include breakpoints.sm-min {
@@ -86,8 +82,6 @@
                 }
             }
             padding: 0.5rem 0 0.5rem;
-
-            //temp
             border-bottom: 1px solid #1b1a1a;
         }
 
@@ -108,7 +102,6 @@
 
         .nav-block,
         .social-block {
-            //padding-top: 1rem;
             display: flex;
             flex-wrap: wrap;
             align-items: center;
